Kubernetes/l3gl-devops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  namespace: devops-l3gl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: l3gldev/task-api:latest
        ports:
        - containerPort: 8085
        resources:
          requests:
            cpu: "200m"
            memory: "250Mi"
          limits:
            cpu: "400m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8085
          initialDelaySeconds: 45
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8085
          initialDelaySeconds: 45
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: devops-l3gl
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: devops-l3gl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /l3gl/(.*)
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8085
